# rec_demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  cloudbaserc.json  demo_customization_accuracy.py  demo_customization_v2.py  demo_customization_v3.py  demo_test.py  main.py  pyproject.toml  run_tests.py
.claude/skills/: cloudbase-deploy.md
app/: __init__.py  cart_service.py  context_service.py  data.py  embedding_service.py  experiment_service.py  llm_service.py  main.py  mcp_server.py  models.py  recommendation.py
app/db/: __init__.py  connection.py  migration.py  schema.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: embedding_demo.html  embedding_demo_v2.html  index.html  presentation.html
docs/: AI_ORDERING_MCP.md  CLOUDBASE_DEPLOY.md  technical_solution.md
